[package]
name = "tetris-piston"
version = "0.1.0"
authors = ["charles <charles.mcallister@dunnker.com>"]
license-file = "license.txt"

[dependencies]
ears = "0.5.1"
piston = "0.38.0"
piston2d-opengl_graphics = "0.55.0"
piston2d-graphics = "0.27.0"
pistoncore-glutin_window = "0.49.0"
rand = "0.5.5"
